--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,22 @@
     <string name="title_activity_use_current_location">Map</string>
     <string name="facebook_app_id">3378177625645396</string>
     <string name="title_activity_maps">Map</string>
+
+
+
+    //Scan Card
+    <string name="scan_card">Scan Card</string>
+    <string name="scan_card_local">Scan Card Local</string>
+    <string name="scan_canceled">Scan canceled</string>
+    <string name="enter_manually">Enter card manually</string>
+    <string name="camera_error">Camera error</string>
+    <string name="analyzer_error">Analyzer error</string>
+    <string name="unknown_reason">Unknown reason</string>
+    <string name="single_activity_demo">Single Activity Demo</string>
+    <string name="enableDebug">Enable Debug</string>
+    <string name="enableNameExtraction">Enable name extraction</string>
+    <string name="enableExpiryExtraction">Enable expiry extraction</string>
+    <string name="enableEnterCardManually">Enable manual entry</string>
+
+
 </resources>
